[package]
name = "chat-terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = "4.7.0"
actix-web-actors = "4.3.0"
crossterm = "0.27.0"
futures-channel = "0.3.30"
futures-util = "0.3.30"
ratatui = "0.26.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
tungstenite = "0.23.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"
